src/test/deca/context/invalid/provided/invalide_06_unary_not.deca
// Description : test l'application de Not sur une expression non booléenne
// Sortie : ERROR dans Not.java

{
    int a;
    a = !a;
}